set up traceability